--- a/gb/24/9/5/n14325019.md
+++ b/gb/24/9/5/n14325019.md
@@ -12,12 +12,12 @@
 <p>当要求 NZeTA（新西兰电子旅行授权）或申请签证时，需要支付 IVL。</p>
 <p>责任编辑：蓝克</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640659.md#1">罗晋被传婚变之际 经纪人发布罗父离世噩耗</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640721.md#1">三退声明精选（2025/11/21）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640342.md#1">英申请永居资格年限延至10年 港人BNO年限不变</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640341.md#1">郑州多名男子开越野车撞开烟酒店大门抢劫</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14645158.md#1">六四抗命军长受审视频曝光 分析：中共末日已近</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14641240.md#1">中共APT31利用云服务对俄IT产业发动网攻</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/3/n11428903.md#1" target="_blank">林辉：周恩来冷酷无情 亲手给荣高棠扣叛徒帽子</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/14/n11111708.md#1" target="_blank">美国务院人权新报告 多次提中共迫害法轮功</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/3/n11232692.md#1" target="_blank">林辉：为延安贩卖鸦片的毒贩死前缘何喊冤？</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/9/1/10/n2392041.md#1" target="_blank">法轮功简介</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
